--- a/gui/forms/qgmdockview.ui
+++ b/gui/forms/qgmdockview.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>155</width>
-    <height>343</height>
+    <width>172</width>
+    <height>350</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -18,8 +18,8 @@
   </property>
   <property name="minimumSize">
    <size>
-    <width>155</width>
-    <height>343</height>
+    <width>172</width>
+    <height>350</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -522,6 +522,18 @@
      <widget class="Line" name="line_4">
       <property name="orientation">
        <enum>Qt::Horizontal</enum>
+      </property>
+     </widget>
+    </item>
+    <item row="16" column="1">
+     <widget class="QPushButton" name="buttonLogInOut">
+      <property name="font">
+       <font>
+        <pointsize>8</pointsize>
+       </font>
+      </property>
+      <property name="text">
+       <string>Log in</string>
       </property>
      </widget>
     </item>
