GUI: add "Import Polylines"

--- a/gui/forms/mainWin.ui
+++ b/gui/forms/mainWin.ui
@@ -38,7 +38,7 @@
      <x>0</x>
      <y>0</y>
      <width>1200</width>
-     <height>33</height>
+     <height>22</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
@@ -107,6 +107,7 @@
      <addaction name="actionImportTexMap"/>
      <addaction name="separator"/>
      <addaction name="actionImportVertexCoordinatesFromCSV"/>
+     <addaction name="actionImportPolylines"/>
     </widget>
     <widget class="QMenu" name="menuExport">
      <property name="title">
@@ -4515,6 +4516,11 @@ The latter will be shown, when the processing has finished.</string>
   <action name="actionViewShow2DBoundingBox">
    <property name="text">
     <string>Bounding Box Size in Camera Coordinates</string>
+   </property>
+  </action>
+  <action name="actionImportPolylines">
+   <property name="text">
+    <string>Import Polylines</string>
    </property>
   </action>
  </widget>
