import labels from file

--- a/gui/forms/mainWin.ui
+++ b/gui/forms/mainWin.ui
@@ -38,7 +38,7 @@
      <x>0</x>
      <y>0</y>
      <width>1200</width>
-     <height>22</height>
+     <height>21</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
@@ -108,6 +108,7 @@
      <addaction name="separator"/>
      <addaction name="actionImportVertexCoordinatesFromCSV"/>
      <addaction name="actionImportPolylines"/>
+     <addaction name="actionImportLabels"/>
     </widget>
     <widget class="QMenu" name="menuExport">
      <property name="title">
@@ -4521,6 +4522,11 @@ The latter will be shown, when the processing has finished.</string>
   <action name="actionImportPolylines">
    <property name="text">
     <string>Import Polylines</string>
+   </property>
+  </action>
+  <action name="actionImportLabels">
+   <property name="text">
+    <string>Import Labels</string>
    </property>
   </action>
  </widget>
