--- a/gui/forms/mainWin.ui
+++ b/gui/forms/mainWin.ui
@@ -174,6 +174,7 @@
     <addaction name="actionLabelSelectionToSeeds"/>
     <addaction name="actionLabelSelMVerts"/>
     <addaction name="actionLabelVertEqualFV"/>
+    <addaction name="actionLabelVertEqualRGB"/>
     <addaction name="actionLabelSelMVertsBackground"/>
     <addaction name="actionLabelFaces"/>
     <addaction name="separator"/>
@@ -4527,6 +4528,11 @@ The latter will be shown, when the processing has finished.</string>
   <action name="actionImportLabels">
    <property name="text">
     <string>Import Labels</string>
+   </property>
+  </action>
+  <action name="actionLabelVertEqualRGB">
+   <property name="text">
+    <string>Label - Vertices w. Equal RGB</string>
    </property>
   </action>
  </widget>
