--- a/gui/python-scripts/pythonscripts.qrc
+++ b/gui/python-scripts/pythonscripts.qrc
@@ -1,5 +1,7 @@
 <RCC>
     <qresource prefix="/pythonscripts">
         <file>warp_vertices.py</file>
+        <file>PCA_vertices.py</file>
     </qresource>
+    <qresource prefix="/"/>
 </RCC>
