--- a/gui/forms/qgmdockinfo.ui
+++ b/gui/forms/qgmdockinfo.ui
@@ -92,6 +92,16 @@
      </widget>
     </item>
     <item>
+     <widget class="QLabel" name="infoLabel">
+      <property name="text">
+       <string/>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignCenter</set>
+      </property>
+     </widget>
+    </item>
+    <item>
      <spacer name="verticalSpacer">
       <property name="orientation">
        <enum>Qt::Vertical</enum>
